UI bug fix where fixed toolbar footer would be overlapped by simplemde

--- a/css/parts/footers.less
+++ b/css/parts/footers.less
@@ -6,6 +6,7 @@
   background: #fcfcfc;
   box-shadow: 0 -2px 3px rgba(0, 0, 0, .1);
   padding: 15px;
+  z-index: 245;
 
   & .footer-toolbar-inner {
     max-width: 1240px;
